deployment/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-hw01-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/gur-ok/?(.*)($|/)
            pathType: Prefix
            backend:
              service:
                name: otus-hw01-service
                port:
                  number: 9000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: otus-hw01-service
                port:
                  number: 9000
